# sanca

./: .env.example  .gitignore  README.MD  ecosystem.config.cjs  next.config.mjs  package-lock.json  package.json  skills-lock.json
app/: layout.tsx  page.tsx
components/: footer.tsx  navbar.tsx
contracts/: DEPLOYMENT.md  README.md
contracts/contracts/sanca_pool/: Cargo.toml  build.rs
contracts/contracts/sanca_pool/src/: drand.rs  lib.rs  test.rs
contracts/contracts/sanca_pool/test_snapshots/test/: test_constructor_initializes_state.1.json  test_contribute_non_member_rejected.1.json  test_create_pool_requires_factory_keeper.1.json  test_double_contribute_rejected.1.json  test_double_join_rejected.1.json  test_double_withdraw_rejected.1.json  test_full_lifecycle_no_yield.1.json  test_invalid_drand_randomness_rejected.1.json  test_liquidation_for_missed_contribution.1.json  test_liquidation_reduces_member_vault_shares.1.json  test_non_member_withdraw_rejected.1.json  test_old_drand_round_rejected.1.json  test_platform_fee_receives_yield_fee.1.json  test_pool_full_rejected.1.json  test_set_keeper.1.json  test_set_keeper_on_factory.1.json  test_settle_after_completion_rejected.1.json  test_settle_cycle_too_early_rejected.1.json  test_settle_cycle_with_yield_distribution.1.json  test_winner_order_unique_per_cycle.1.json  test_withdraw_after_completion_returns_collateral.1.json  test_withdraw_before_completion_rejected.1.json
docs/: PRD.md  VPS_DEPLOY.md
hooks/: useAllActivities.ts  useContractInvoke.ts  useContribute.ts  useCoridorRamp.ts  useCreatePool.ts  (+13 more)
(+95 files in other folders)
