[package]
name = "sanca-pool"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
sanca-factory = { path = "../sanca_factory" }
bls12_381 = "0.8"
group = "0.13"
hex-literal = "0.4"
